--- a/api/website/pages/guild.ejs
+++ b/api/website/pages/guild.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="<%= base %>/astyle.css">
+        <link rel="stylesheet" href="<%= base %>/style.css">
         <script>
             function buildObject() {
                 var obj = {
@@ -257,11 +257,11 @@
             </div>
             <!--premium-->
             <div class="setting premium" style="grid-area: resend">
-                <h3 class="name"> Resend <img title="Premium" src="/premium.png" width="30"></h3>
+                <h3 class="name"> Resend <img title="Premium" class="premb" src="/premium.png" width="30"></h3>
                 <label class="switch"><input type="checkbox" class="prem" id="resend" <%= data.db.webhook ? "checked" : "" %>><span class="slider round"></span></label>
             </div>
             <div class="setting premium" style="grid-area: channels">
-                <h3 class="name"> Ignore Channels <img title="Premium" src="/premium.png" width="30"></h3>
+                <h3 class="name"> Ignore Channels <img title="Premium" class="premb" src="/premium.png" width="30"></h3>
                 <select id="channeladd">
                     <% data.c.forEach(channel=>{ %>
                         <option value="<%= channel.name %> <%= channel.id %>">#<%=channel.name%></option>
@@ -287,7 +287,7 @@
             var isPremium = <%= premium %>
             document.querySelectorAll(".premium").forEach(function(elm) {
                 elm.onclick = function() {
-                    if(!isPremium) return alert("This is a premium feature!")
+                    // if(!isPremium) return alert("This is a premium feature!")
                 }
             })
         
@@ -296,6 +296,11 @@
                     elm.setAttribute("disabled", "");
                 });
             }
+            document.querySelectorAll(".premb").forEach(function(elm) {
+                elm.onclick = function() {
+                    window.open("/premium", "_blank")
+                }
+            })
         
             document.getElementById("log").value = "<%= data.db.log %>"
             document.getElementById("role").value = "<%= data.db.role || "null"%>"
